--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://hidesuzuki.github.io'
 languageCode = 'ja-jp'
-title = 'My New Hugo Site'
+title = 'hidesuzuki'
 theme = 'ananke'
